Features from the own Java lol