@@ -690,7 +690,7 @@ public class Server {
         }
 
         while (!processDiseaseAnnounceClients.isEmpty()) {
-            Client c = processDiseaseAnnounceClients.remove(0);
+            Client c = processDiseaseAnnounceClients.removeFirst();
             Character player = c.getPlayer();
             if (player != null && player.isLoggedinWorld()) {
                 player.announceDiseases();
@@ -702,7 +702,7 @@ public class Server {
         try {
             // this is to force the system to wait for at least one complete tick before releasing disease info for the registered clients
             while (!registeredDiseaseAnnouncePlayers.isEmpty()) {
-                Client c = registeredDiseaseAnnouncePlayers.remove(0);
+                Client c = registeredDiseaseAnnouncePlayers.removeFirst();
                 processDiseaseAnnouncePlayers.add(c);
             }
         } finally {
@@ -738,9 +738,9 @@ public class Server {
                         playerRanking.add(new ArrayList<>(0));
                     }
 
-                    playerRanking.add(worldid, ranking.get(0).getRight());
+                    playerRanking.add(worldid, ranking.getFirst().getRight());
                 } else {
-                    playerRanking.add(0, ranking.get(0).getRight());
+                    playerRanking.addFirst(ranking.getFirst().getRight());
                 }
             } finally {
                 wldWLock.unlock();
@@ -756,7 +756,7 @@ public class Server {
                     return;
                 }
 
-                playerRanking.remove(playerRanking.size() - 1);
+                playerRanking.removeLast();
             } finally {
                 wldWLock.unlock();
             }
@@ -765,7 +765,7 @@ public class Server {
 
             wldWLock.lock();
             try {
-                playerRanking.add(0, ranking.get(0).getRight());
+                playerRanking.addFirst(ranking.getFirst().getRight());
             } finally {
                 wldWLock.unlock();
             }
@@ -781,7 +781,7 @@ public class Server {
         wldWLock.lock();
         try {
             if (!YamlConfig.config.server.USE_WHOLE_SERVER_RANKING) {
-                for (int i = playerRanking.size(); i <= rankUpdates.get(rankUpdates.size() - 1).getLeft(); i++) {
+                for (int i = playerRanking.size(); i <= rankUpdates.getLast().getLeft(); i++) {
                     playerRanking.add(new ArrayList<>(0));
                 }
 
@@ -789,7 +789,7 @@ public class Server {
                     playerRanking.set(wranks.getLeft(), wranks.getRight());
                 }
             } else {
-                playerRanking.set(0, rankUpdates.get(0).getRight());
+                playerRanking.set(0, rankUpdates.getFirst().getRight());
             }
         } finally {
             wldWLock.unlock();
